# provablerequirements

./: .editorconfig  .gitignore  .markdownlint.jsonc  .prettierignore  .yamllint.yml  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/patches/: creusot-linux-aarch64-provers.patch
.githooks/: pre-commit
.github/workflows/: build-devcontainer-image.yml  ci.yml  release.yml
docs/: applying-to-existing-repos.md  build-and-release.md  operator-workflow-notes.md  requirement-language.md  traceability_report.md
requirements-doorstop/: REQ001.yml  REQ002.yml  REQ003.yml  REQ004.yml  REQ005.yml  REQ006.yml  REQ007.yml  REQ008.yml  REQ009.yml  REQ010.yml  REQ011.yml  REQ012.yml  REQ013.yml  REQ014.yml  REQ015.yml  REQ016.yml  REQ017.yml  REQ018.yml  REQ019.yml  REQ020.yml  REQ021.yml  REQ022.yml  REQ023.yml  REQ024.yml  REQ025.yml  REQ026.yml  REQ027.yml  REQ028.yml  REQ029.yml  REQ030.yml  REQ031.yml  REQ032.yml  REQ033.yml  REQ034.yml  REQ035.yml  REQ036.yml  REQ037.yml  REQ038.yml  REQ039.yml  REQ040.yml  (+1 more)
scripts/: traceability.py  validate_dependencies.sh
src/: adopt.rs  contract_draft.rs  creusot.rs  detail.rs  doorstop.rs  draft.rs  engine.rs  formalize.rs  grounding.rs  kani.rs  lib.rs  llm.rs  lowering.rs  main.rs  prl.rs  prusti.rs  rust_adapter.rs  semantic_draft.rs  server.rs  source.rs  status.rs  tla_adapter.rs  tlc.rs  triage.rs  verdict.rs  verdict_store.rs  verify.rs
src/prl/: ast.rs  check.rs  error.rs  fragment.rs  lexer.rs  parser.rs  readback.rs  vacuity.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  api.ts  index.css  labels.ts  types.ts
web/src/components/: Badge.tsx  CoverageBar.tsx  ItemDetailDialog.tsx  RequirementsTable.tsx  VerdictBadge.tsx  VerifyPanel.tsx
