[package]
name = "provreq"
version = "0.0.1"
edition = "2021"
description = "PRL native provisioner and backend server (Design C)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greeng3/provablerequirements"

[[bin]]
name = "provreq"
path = "src/main.rs"

[lib]
name = "provreq"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
rust-embed = "8"
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# The category-1 adapter resolves a PRL predicate to a real item in the subject's Rust
# (REQ025). Both crates were already in Cargo.lock transitively (serde derive), so this
# promotes them to direct deps rather than adding weight. `span-locations` is what makes
# a resolved predicate reportable as file:line — without it syn spans carry no line.
syn = { version = "2", features = ["full", "parsing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

# cargo-dist / release configuration is expressed in the CI workflow
# (.github/workflows/release.yml) for this prototype; see docs/build-and-release.md.
